fixed LI url and renamed short resume to index.md

--- a/my-cv/mkdocs.yml
+++ b/my-cv/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Jonatan Snyders
 nav:
-  - In Short: resume_short.md
+  - In Short: index.md
   - In Long: resume_long.md
 theme: dracula
 site_url: https://jsnyde0.github.io/curriculum_vitae/
